# gamecov

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  pyproject.toml  rustfmt.toml
.github/workflows/: mypy.yml  pylint.yml  pytest.yml  ruff.yml  rust.yml
benchmarks/: conftest.py  test_bench_monitor.py
docs/: api.md  design.md  frame_cov.md  tuning.md
gamecov-core/: Cargo.toml  pyproject.toml
gamecov-core/src/: bktree.rs  lib.rs  monitor.rs
rust-tests/: prop_tests.rs
src/: bktree.rs  lib.rs  main.py  unionfind.rs
src/gamecov/: __init__.py  _gamecov_core.pyi  cov_base.py  dedup.py  env.py  frame.py  frame_cov.py  generator.py  loader.py  stitch.py  writer.py
src/mapcov/: __init__.py  cov_base.py  dedup.py  frame.py  frame_cov.py  loader.py  stitch.py
tests/: test_BK_frame_monitor.py  test_dedup.py  test_generators.py  test_load_n.py  test_load_write.py  test_load_write_assets.py  test_load_write_random.py  test_loader.py  test_monotone.py  test_monotone_inc.py  test_monotone_smb.py  test_rust_frame_monitor.py  test_smb_monotone.py
