[package]
name = "gamecov-core"
version = "0.1.0"
edition = "2021"
description = "Rust-accelerated core for gamecov frame coverage monitoring"

[lib]
name = "gamecov_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }

[dev-dependencies]
proptest = "1"

[[test]]
name = "prop_tests"
path = "rust-tests/prop_tests.rs"

[profile.release]
lto = "fat"
codegen-units = 1
