[project]
name = "mapcov"
version = "0.1.0"
description = "Map coverage for coverage-guided game play-testing"
readme = "README.md"
authors = [{ name = "Yifeng He", email = "yfhe@ucdavis.edu" }]
requires-python = ">=3.11"
dependencies = [
    "av>=15.0.0",
    "imagehash>=4.3.2",
    "imageio[ffmpeg]>=2.37.0",
    "mypy>=1.16.1",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pillow>=11.3.0",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "returns[compatible-mypy]>=0.21.0",
    "scikit-image>=0.25.2",
    "stitching==0.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.messages_control]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "logging-fstring-interpolation",
    "unused-import",
    "ungrouped-imports",
    "subprocess-run-check",
    "too-many-instance-attributes",
    "missing-module-docstring",
]
fail-under = 9

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
allow_redefinition = false
ignore_errors = false
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = false
plugins = ["returns.contrib.mypy.returns_plugin"]
