[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "gamecov-core"
version = "0.1.0"
description = "Rust-accelerated core for gamecov frame coverage monitoring"
authors = [{ name = "Yifeng He", email = "yfhe.prsn@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
]

[tool.maturin]
features = ["pyo3/extension-module"]
